# RBIni

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: Base.cmake  Config.cmake
include/rbini/: RBIni.hpp  Section.hpp  Utils.hpp  Value.hpp
source/: RBIni.cpp  Section.cpp  Utils.cpp  Value.cpp  main.cpp
tests/: CMakeLists.txt  RBIni_tests.cpp  Section_tests.cpp  Utils_tests.cpp  Value_tests.cpp
tests/res/: bad.ini  correct.ini
